fixed+confirmed all spacings

--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    padding: 46px 122px 88px 122px;
+    padding: 46px 112px 88px 112px;
     background-color: var(--color-light-gray);
     gap: 88px;
 
@@ -24,8 +24,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 56px;
+    text-align: center;
+}
+
+.heroHeaders {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: 16px;
-    
+
     p { // BEST BUDDIES AT UC DAVIS
         color: var(--color-purple);
     }
@@ -61,7 +69,7 @@
     padding: 40px;
     flex-direction: column;
     align-items: center;
-    gap: 24px;
+    gap: 48px;
     flex-shrink: 0;
     border-radius: 15px;
     background: white;
@@ -74,11 +82,11 @@
     }
 }
 
-.missionContent {
+.missionText {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 48px;
+    gap: 24px;
 
     width: 75%;
 }
@@ -90,14 +98,13 @@
 
     h2 {
         color: var(--color-dark-purple);
-        text-align: center;
     }
 }
 
-.carousel {
+.eventCarousel {
     display: flex;
     flex-direction: row;
-    gap: 40px;
+    gap: 32px;
     align-items: flex-start;
 }
 
@@ -107,7 +114,7 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
-    padding: 65px 114px 105px 110px;
+    padding: 71.5px 112px;
     
     background-color: var(--color-purple);
     h2 {
